---------------------------------------------------------------------------------------------------
Version: 0.3.20
Date: 2025-06-20
  Bugfixes:
    - Fixed some asteroid chunks not spawning correctly
---------------------------------------------------------------------------------------------------
Version: 0.3.19
Date: 2025-06-13
  Features:
    - Added asteroids as new space locations for acquiring minerals
  Changes:
    - Change laser technology and laser related recipes
    - Rebalanced noble metal recipes
    - Updated ja locale thanks to snow note
  Bugfixes:
    - Fixed frozen item icons on belts
    - Fixed module visualzation in alt for some buildings buildings
    - Fixed that cooling cooland could use productivity modules
---------------------------------------------------------------------------------------------------
Version: 0.3.18
Date: 2025-06-06
  Features:
    - Rockets are built now in silo, rocket parts are built in manufacturer
    - Added teflon recipe chain
    - Added rhodium and its alloys
  Changes:
    - Changes in space science branch of tech tree
    - Landed cargo pods are recovered when picking them up
    - Changed location of high purity silicon in tech tree
    - Removed ferrite with copper, zinc and nickel recipes
    - Changed bleach recipe
    - Some icon changes
    - Biological science pack 2 is now made in greenhouse
    - Nickel ore has now has 1 starting area patch
    - Quality module 2 is unlocked after processing unit
  Balancing:
    - Increased power consumption and speed of big crusher and educed module slots from 4 to 3
  Bugfixes:
    - Fixed crystallizer animation speed
    - Fixed recipe subgroup of biological science pack 2
    - Fixed that shotgun and shutgun ammo was unlocked twice in tech tree
---------------------------------------------------------------------------------------------------
Version: 0.3.17
Date: 2025-05-30
  Features:
    - Added potassium casting
    - Added crushed and enriched stibnite