@@ -13,6 +13,7 @@ data:extend({
     order = "a-b[dysprosium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 14 ^ 2,
     distance = 14,
     orientation = 0.17,
     magnitude = 1.0,
@@ -27,6 +28,7 @@ data:extend({
     order = "a-b[ytterbium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 11 ^ 2,
     distance = 11,
     orientation = 0.35,
     magnitude = 1.0,
@@ -41,6 +43,7 @@ data:extend({
     order = "a-b[iridium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 10 ^ 2,
     distance = 10,
     orientation = 0.6,
     magnitude = 1.0,
@@ -55,6 +58,7 @@ data:extend({
     order = "a-b[krypton-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 11 ^ 2,
     distance = 11,
     orientation = 0,
     magnitude = 1.0,
@@ -69,6 +73,7 @@ data:extend({
     order = "a-b[osmium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 8 ^ 2,
     distance = 8,
     orientation = 0.62,
     magnitude = 1.0,
@@ -83,6 +88,7 @@ data:extend({
     order = "a-b[promethium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 5 ^ 2,
     distance = 5,
     orientation = 0.9,
     magnitude = 1.0,
@@ -97,6 +103,7 @@ data:extend({
     order = "a-b[rhodium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 17 ^ 2,
     distance = 17,
     orientation = 0.285,
     magnitude = 0.7,
@@ -111,6 +118,7 @@ data:extend({
     order = "a-b[ruthenium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 21 ^ 2,
     distance = 21,
     orientation = 0.23,
     magnitude = 1.0,
@@ -125,6 +133,7 @@ data:extend({
     order = "a-b[terbium-rich-asteroid]",
     subgroup = "planets",
     gravity_pull = -10,
+    solar_power_in_space = 300 * 15 ^ 2 / 20 ^ 2,
     distance = 20,
     orientation = 0.33,
     magnitude = 1.0,
