@@ -3,6 +3,7 @@ Version: 0.3.20
 Date: 2025-06-20
   Bugfixes:
     - Fixed some asteroid chunks not spawning correctly
+    - Fixed power from solar panels in space for asteroids
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.19
 Date: 2025-06-13
